# windows-rpc-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
.github/workflows/: check.yml
src/: client_binding.rs  lib.rs  main.rs
tests/: test_file.rs
windows_rpc/: Cargo.toml
windows_rpc/src/: alloc.rs  client_binding.rs  lib.rs  server.rs  server_binding.rs
windows_rpc/tests/: test_client_server.rs  test_out_string.rs  test_sanity.rs  test_server_simple.rs  test_string_params.rs
windows_rpc_macros/: Cargo.toml
windows_rpc_macros/src/: client_codegen.rs  codegen.rs  constants.rs  lib.rs  ndr.rs  ndr64.rs  parse.rs  server_codegen.rs  types.rs
