[package]
name = "windows-rpc"
version = "0.0.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Windows RPC for Rust"
repository = "https://github.com/gadol21/windows-rpc-rs"
readme = "../README.md"

[dependencies]
windows-rpc-macros = { path = "../windows_rpc_macros", version = "0.0.2" }

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_System_Rpc",
]

[dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Rpc",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
