[package]
name = "windows-rpc-macros"
version = "0.0.4"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Windows RPC for Rust"
repository = "https://github.com/gadol21/windows-rpc-rs"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
